# my-agents

./: cleanup_chromadb.sh  temporary
1_foundations/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb  chroma_api.py
1_foundations/me/: Image-Line - FL Studio Producer Edition 25.1.4 Build 4951 (All Plugins Edition + Addons) [01.09.2025] RePack KpoJIuK - Rev.1 [rutracker-6739232].torrent  Image-Line - FLEX Complete Expansion Bundle v09.2025 [Warez Down & iNVINCIBLE] (FLEX) [rutracker-6739185].torrent  Output - Portal v1.2.1 VST VST3 AAX x86 x64 [13.3.2023]-R2R [rutracker-6336015].torrent  [DL] Viewfinder [P] [RUS + ENG + 10 ENG] (2023, Puzzle) (20231024) [Portable] [rutracker-6387864].torrent
1_foundations/rag_chat/: RAG_chatbot.py  RAG_chatbot_personal.py  README.md  remember_app.py  requirements.txt
1_foundations/rag_chat/me/: summary.txt
2_openai/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb
2_openai/deep_research/: clarifying_agent.py  deep_research_v2.py  email_agent.py  planner_agent.py  research_agent.py  research_manager.py  search_agent.py
3_crew/coder_handson/: README.md  pyproject.toml
3_crew/coder_handson/output/: code_and_output.txt
3_crew/coder_handson/src/coder_handson/: crew.py  main.py
3_crew/coder_handson/src/coder_handson/config/: agents.yaml  tasks.yaml
3_crew/debate_handson/: README.md  pyproject.toml
3_crew/debate_handson/output/: decide.md  oppose.md  propose.md
3_crew/debate_handson/src/debate_handson/: crew.py  main.py
3_crew/engineering_team/src/engineering_team/: crew.py  main.py
3_crew/engineering_team/src/engineering_team/config/: agents.yaml
3_crew/financial_researcher_handson/: README.md  pyproject.toml  report.md
3_crew/financial_researcher_handson/src/financial_researcher_handson/: crew.py  main.py
3_crew/notification_tester/: README.md  pyproject.toml  test.py
3_crew/notification_tester/src/notification_tester/: crew.py  main.py
3_crew/notification_tester/src/notification_tester/config/: agents.yaml  tasks.yaml
3_crew/notification_tester/src/notification_tester/tools/: push_tool.py
3_crew/stock_picker_handson/: README.md  pyproject.toml
3_crew/stock_picker_handson/output/: decision.md  research_report.json  trending_companies.json
3_crew/stock_picker_handson/src/stock_picker_handson/: crew.py  main.py
3_crew/stock_picker_handson/src/stock_picker_handson/tools/: push_tool.py
4_langgraph/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  3_lab3.py  4_lab4.ipynb  memory.db  memory.db-shm  memory.db-wal  sidekick_tools.py
4_langgraph/sandbox/: mercadillos.md
5_autogen/: 2_lab2_autogen_agentchat.ipynb  3_lab3_autogen_core.ipynb  4_lab4_autogen_distributed.ipynb
6_mcp/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb  5_lab5.ipynb  my_test_mcp_server.py  push_server.py  trading_floor.py
6_mcp/sandbox/: banoffee.md
guides/: 11_async_python.ipynb
