[project]
name = "coder_handson"
version = "0.1.0"
description = "coder_handson using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.203.1,<1.0.0"
]

[project.scripts]
coder_handson = "coder_handson.main:run"
run_crew = "coder_handson.main:run"
train = "coder_handson.main:train"
replay = "coder_handson.main:replay"
test = "coder_handson.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
