[project]
name = "debate_handson"
version = "0.1.0"
description = "debate_handson using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.203.1,<1.0.0"
]

[project.scripts]
debate_handson = "debate_handson.main:run"
run_crew = "debate_handson.main:run"
train = "debate_handson.main:train"
replay = "debate_handson.main:replay"
test = "debate_handson.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
