[project]
name = "financial_researcher_handson"
version = "0.1.0"
description = "financial_researcher_handson using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.203.1,<1.0.0"
]

[project.scripts]
financial_researcher_handson = "financial_researcher_handson.main:run"
run_crew = "financial_researcher_handson.main:run"
train = "financial_researcher_handson.main:train"
replay = "financial_researcher_handson.main:replay"
test = "financial_researcher_handson.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
