[project]
name = "notification_tester"
version = "0.1.0"
description = "notification_tester using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.203.1,<1.0.0"
]

[project.scripts]
notification_tester = "notification_tester.main:run"
run_crew = "notification_tester.main:run"
train = "notification_tester.main:train"
replay = "notification_tester.main:replay"
test = "notification_tester.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
