[project]
name = "stock_picker_handson"
version = "0.1.0"
description = "stock_picker_handson using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.203.1,<1.0.0"
]

[project.scripts]
stock_picker_handson = "stock_picker_handson.main:run"
run_crew = "stock_picker_handson.main:run"
train = "stock_picker_handson.main:train"
replay = "stock_picker_handson.main:replay"
test = "stock_picker_handson.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
